--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ li {
     background-color: #273549;
     margin-top: 10px;
     padding: 10px;
+    font-size: 15px;
     border-radius: 6px;
     color: #55F991;
     white-space: nowrap; 
@@ -85,6 +86,7 @@ li a {
     background-color: #273549;
     margin-top: 10px;
     padding: 10px;
+    font-size: 15px;
     border-radius: 6px;
     color: #55F991;
     white-space: nowrap; 
@@ -110,6 +112,7 @@ li a {
 #footer p{
     color: #1F2937;
     font-weight: 600;
+    font-size: 15px;
     width: 300px;
     text-align: center;
     padding: 10px;
@@ -134,3 +137,18 @@ a{
   ::-ms-input-placeholder { /* Microsoft Edge */
     color: ghostwhite;
   }
+
+  /* scroll bar  */
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+::-webkit-scrollbar-track {
+    background-color: #273549;
+  }
+  
+::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(180deg, #55F991 0%, #10B981 99%);
+    box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+  }
+  
